sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:8: error: '{' expected but 'case' found.
    case BLEU => 
    ^DutchFlagAlgo:10: error: '}' expected but 'case' found.
    case WHITE => 
    ^