sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var apresBleu=0
  var blancRouge=getTaille()-1
  var avantBlanc=getTaille()-1
  while(!estTrie){
    getCouleur(apresBleu) match
    case BLEU => 
    case ROUGE => echange(apresBleu,avantBlanc)
    case WHITE => 
  }
}